infrastructure/gcp/gateways/config/envoy-healthz.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: envoy-healthz
  namespace: infra
spec:
  parentRefs:
    - name: eg-internal
  rules:
    - matches:
        - path:
            type: Exact
            value: /healthz
      filters:
        - type: ExtensionRef
          extensionRef:
            group: gateway.envoyproxy.io
            kind: HTTPRouteFilter
            name: healthz-direct-response
